--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "mysql2": "^3.14.0",
     "oracledb": "^6.8.0",
