--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.13",
     "mysql2": "^3.14.0",
     "oracledb": "^6.8.0",
     "passport": "^0.7.0",
