--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "mysql2": "^3.14.0",
     "oracledb": "^6.8.0",
@@ -50,6 +51,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/compression": "^1.8.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
