--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
+    "ioredis": "^5.6.1",
     "mysql2": "^3.14.0",
     "oracledb": "^6.8.0",
     "passport": "^0.7.0",
@@ -46,6 +47,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io-redis": "^5.4.0",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
