--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "copy": "xcopy D:\\project\\backend\\dist \\\\172.21.255.188\\amecweb\\wwwroot\\development\\backend\\dist /E /I /Y"
   },
   "dependencies": {
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
@@ -39,6 +41,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
+    "graphql": "^16.11.0",
     "ioredis": "^5.6.1",
     "mysql2": "^3.14.0",
     "oracledb": "^6.8.0",
@@ -47,7 +50,6 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "socket.io-redis": "^5.4.0",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
