feat: connect as400

--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "graphql": "^16.11.0",
+    "ibm_db": "^3.3.2",
     "ioredis": "^5.6.1",
     "mysql2": "^3.14.0",
+    "odbc": "^2.4.9",
     "oracledb": "^6.8.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
