--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ioredis": "^5.6.1",
     "mysql2": "^3.14.0",
     "oracledb": "^6.8.0",
+    "p-limit": "^6.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
