--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@nestjs/websockets": "^11.1.3",
     "@scalar/nestjs-api-reference": "^0.5.6",
     "bcrypt": "^6.0.0",
+    "chalk": "^5.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cls-hooked": "^4.2.2",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
@@ -49,6 +51,7 @@
     "ioredis": "^5.6.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.0",
+    "nest-winston": "^1.10.2",
     "odbc": "^2.4.9",
     "oracledb": "^6.8.0",
     "p-limit": "^6.2.0",
@@ -59,7 +62,9 @@
     "rxjs": "^7.8.1",
     "socket.io-redis": "^5.4.0",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.22"
+    "typeorm": "^0.3.22",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
