--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.0",
     "nest-winston": "^1.10.2",
+    "node-sql-parser": "^5.3.11",
     "odbc": "^2.4.9",
     "oracledb": "^6.8.0",
     "p-limit": "^6.2.0",
