--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mysql2": "^3.14.0",
     "nodemailer": "^7.0.5",
     "nest-winston": "^1.10.2",
+    "node-sql-parser": "^5.3.11",
     "odbc": "^2.4.9",
     "oracledb": "^6.8.0",
     "p-limit": "^6.2.0",
