--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io-redis": "^5.4.0",
+    "strip-ansi": "^7.1.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.22",
     "winston": "^3.17.0",
