--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ioredis": "^5.6.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.0",
+    "nodemailer": "^7.0.5",
     "odbc": "^2.4.9",
     "oracledb": "^6.8.0",
     "p-limit": "^6.2.0",
