--- a/package.json
+++ b/package.json
@@ -55,15 +55,16 @@
     "ioredis": "^5.6.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.0",
-    "nodemailer": "^7.0.5",
     "nest-winston": "^1.10.2",
     "node-sql-parser": "^5.3.11",
+    "nodemailer": "^7.0.5",
     "odbc": "^2.4.9",
     "oracledb": "^6.8.0",
     "p-limit": "^6.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "playwright": "^1.55.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io-redis": "^5.4.0",
