--- a/src/.env-sample
+++ b/src/.env-sample
@@ -3,11 +3,20 @@ HOST=AMEC
 JWT_SECRET=donttellanyone
 JWT_COOKIE_NAME=jabbybanaka
 
+MAIL_HOST=
+MAIL_PORT=
+MAIL_FROM=
+MAIL_ADMIN=
 
+
+APP_WEBFLOW=
+
+NODE_ENV=development
 STATE=development
 
 # AMEC FILE PATH
 AMEC_FILE_PATH=//heven/then/hell
+SP_FILE_PATH=//heven/then/hell/SP/
 
 # AMEC DATABASE
 AMEC_HOST=ip
@@ -27,11 +36,11 @@ WEBFORM_DATABASE=wtf
 WEBFORM_SERVICE=wtf
 WEBFORM_CONNECTION=wtf2
 
-# WEBFORM TEST DATABASE
-WEBFORM_TEST_HOST=ip2
-WEBFORM_TEST_PORT=3306
-WEBFORM_TEST_USER=vanisa
-WEBFORM_TEST_PASSWORD=palama
-WEBFORM_TEST_DATABASE=wtf
-WEBFORM_TEST_SERVICE=wtf
-WEBFORM_TEST_CONNECTION=wtf2
+#Logger
+LOGGER_CONSOLE=debug
+LOGGER_FILE=debug
+LOGGER_ERROR=error
+
+AUTOMATESNAP=0
+
+ALLOW_ORIGIN=http://localhost:3001,
