--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "graphql": "^16.11.0",
     "ibm_db": "^3.3.2",
     "ioredis": "^5.6.1",
+    "mssql": "^11.0.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.0",
     "nest-winston": "^1.10.2",
