--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@scalar/nestjs-api-reference": "^0.5.6",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.0",
@@ -49,7 +50,7 @@
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.18",
     "express": "^5.1.0",
     "graphql": "^16.11.0",
     "ibm_db": "^3.3.2",
@@ -66,6 +67,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-lib": "^1.17.1",
     "playwright": "^1.55.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
