--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.18",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "graphql": "^16.11.0",
     "ibm_db": "^3.3.2",
     "ioredis": "^5.6.1",
+    "jszip": "^3.10.1",
     "mssql": "^11.0.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.0",
