--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.18",
     "exceljs": "^4.4.0",
+    "dir-compare": "^5.0.0",
     "express": "^5.1.0",
     "graphql": "^16.11.0",
     "ibm_db": "^3.3.2",
