refactor: update database connection names and improve file handling
- Changed database connection name from 'amecConnection' to 'escsConnection' in user-item-station and user-item modules.
- Updated entity definitions to use the correct schema and table names in user-item and user-section entities.
- Refactored user service and user section service to use the new database connection.
- Enhanced file handling in file service with new DTO for file operations and added methods for listing directories.
- Introduced matrix-ads module with basic CRUD operations and service methods.
- Updated main application configuration to support new database connection settings.

--- a/.env-sample
+++ b/.env-sample
@@ -3,12 +3,16 @@ HOST=AMEC
 JWT_SECRET=donttellanyone
 JWT_COOKIE_NAME=jabbybanaka
 
+MASTER_DECRYPTION_KEY=
+MASTER_DECRYPTION_IV=
+KEY_COOKIE_NAME=
+
 MAIL_HOST=
 MAIL_PORT=
 MAIL_FROM=
 MAIL_ADMIN=
 
-
+APP_HOST=
 APP_WEBFLOW=
 
 NODE_ENV=development
@@ -18,6 +22,10 @@ STATE=development
 AMEC_FILE_PATH=//heven/then/hell
 SP_FILE_PATH=//heven/then/hell/SP/
 
+AMEC_FILE_PATH=
+SP_FILE_PATH=
+GP_FILE_PATH=
+
 # AMEC DATABASE
 AMEC_HOST=ip
 AMEC_PORT=3306
@@ -26,6 +34,12 @@ AMEC_PASSWORD=palama
 AMEC_DATABASE=wtf
 AMEC_SERVICE=wtf2
 
+SP_HOST=
+SP_PORT=
+SP_USER=
+SP_PASSWORD=
+SP_DATABASE=
+SP_SERVICE=
 
 # WEBFORM DATABASE
 WEBFORM_HOST=ip2
@@ -35,6 +49,55 @@ WEBFORM_PASSWORD=palama
 WEBFORM_DATABASE=wtf
 WEBFORM_SERVICE=wtf
 WEBFORM_CONNECTION=wtf2
+
+DOCINV_HOST=
+DOCINV_PORT=
+DOCINV_USER=
+DOCINV_PASSWORD=
+DOCINV_SERVICE=
+
+INVOICE_HOST=
+INVOICE_USER=
+INVOICE_PASSWORD=
+INVOICE_DATABASE=
+
+AUD_HOST=
+AUD_USER=
+AUD_PASSWORD=
+AUD_DATABASE=
+AUD_SERVICE=
+
+IDS_HOST=
+IDS_PORT=
+IDS_USER=
+IDS_PASSWORD=
+IDS_SERVICE=
+
+GP_HOST=
+GP_PORT=
+GP_USER=
+GP_PASSWORD=
+GP_DATABASE=
+GP_SERVICE=
+
+PACKING_HOST=
+PACKING_USER=
+PACKING_PASSWORD=
+PACKING_DATABASE=
+
+ELMES_HOST=
+ELMES_PORT=
+ELMES_USER=
+ELMES_PASSWORD=
+ELMES_DATABASE=
+ELMES_SERVICE=
+
+ESCS_HOST=
+ESCS_PORT=
+ESCS_USER=
+ESCS_PASSWORD=
+ESCS_SERVICE=
+ESCS_SCHEMA=
 
 #Logger
 LOGGER_CONSOLE=debug
