--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/websockets": "^11.1.3",
     "@pdf-lib/fontkit": "^1.1.1",
     "@scalar/nestjs-api-reference": "^0.5.6",
+    "@socket.io/redis-adapter": "^8.3.0",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.0",
     "class-transformer": "^0.5.1",
