--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "playwright": "^1.55.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "strip-ansi": "^7.1.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.26",
