--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@scalar/nestjs-api-reference": "^0.5.6",
     "@socket.io/redis-adapter": "^8.3.0",
+    "@types/qrcode": "^1.5.6",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.0",
     "class-transformer": "^0.5.1",
@@ -76,6 +77,7 @@
     "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
     "playwright": "^1.55.0",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
