--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
     "playwright": "^1.55.0",
+    "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
