--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /dist
 /node_modules
 /build
+/dist
+/sql
 
 # Logs
 logs
@@ -60,5 +62,3 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 public/outlook/
-
-package-lock.json
